compiler/gramatica_v4Parser.py
# Generated from compiler/gramatica_v4.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramatica_v4Parser ( Parser ):

    grammarFileName = "gramatica_v4.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'program'", "<INVALID>", 
                     "'int'", "'float'", "'string'", "'bool'", "'void'", 
                     "'if'", "'else'", "'while'", "'for'", "'.'", "'struct'", 
                     "'switch'", "'case'", "'default'", "':'", "'return'", 
                     "'print'", "'import'", "'break'", "'continue'", "'true'", 
                     "'false'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'&&'", "'||'", "'!'", "'>'", "'<'", "'>='", "'<='", 
                     "'=='", "'!='", "'('", "')'", "'{'", "'}'", "';'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "PROGRAM", 
                      "DECL", "INT", "FLOAT_T", "STRING_T", "BOOL", "VOID", 
                      "IF", "ELSE", "WHILE", "FOR", "DOT", "STRUCT", "SWITCH", 
                      "CASE", "DEFAULT", "COLON", "RETURN", "PRINT", "IMPORT", 
                      "BREAK", "CONTINUE", "TRUE", "FALSE", "ASIG", "SUM", 
                      "RES", "MUL", "DIV", "MOD", "AND", "OR", "NOT", "GT", 
                      "LT", "GTE", "LTE", "EQ", "NEQ", "PAI", "PAD", "LLA", 
                      "LLC", "SEMI", "COMMA", "NUM", "FLOAT", "STRING", 
                      "VAR", "LINE_COMMENT", "WS", "ERROR_CHAR" ]

    RULE_root = 0
    RULE_statement = 1
    RULE_declaration = 2
    RULE_declarationStatement = 3
    RULE_structDecl = 4
    RULE_structField = 5
    RULE_tipo = 6
    RULE_baseTipo = 7
    RULE_assignment = 8
    RULE_assignmentStatement = 9
    RULE_ifStatement = 10
    RULE_whileStatement = 11
    RULE_forStatement = 12
    RULE_forInit = 13
    RULE_forUpdate = 14
    RULE_switchStatement = 15
    RULE_caseClause = 16
    RULE_defaultClause = 17
    RULE_literal = 18
    RULE_functionDecl = 19
    RULE_paramList = 20
    RULE_param = 21
    RULE_returnStmt = 22
    RULE_printStmt = 23
    RULE_importStmt = 24
    RULE_breakStmt = 25
    RULE_continueStmt = 26
    RULE_block = 27
    RULE_condition = 28
    RULE_expr = 29
    RULE_functionCall = 30
    RULE_argList = 31
    RULE_arrayLiteral = 32
    RULE_fieldAccess = 33
    RULE_relop = 34

    ruleNames =  [ "root", "statement", "declaration", "declarationStatement", 
                   "structDecl", "structField", "tipo", "baseTipo", "assignment", 
                   "assignmentStatement", "ifStatement", "whileStatement", 
                   "forStatement", "forInit", "forUpdate", "switchStatement", 
                   "caseClause", "defaultClause", "literal", "functionDecl", 
                   "paramList", "param", "returnStmt", "printStmt", "importStmt", 
                   "breakStmt", "continueStmt", "block", "condition", "expr", 
                   "functionCall", "argList", "arrayLiteral", "fieldAccess", 
                   "relop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    PROGRAM=3
    DECL=4
    INT=5
    FLOAT_T=6
    STRING_T=7
    BOOL=8
    VOID=9
    IF=10
    ELSE=11
    WHILE=12
    FOR=13
    DOT=14
    STRUCT=15
    SWITCH=16
    CASE=17
    DEFAULT=18
    COLON=19
    RETURN=20
    PRINT=21
    IMPORT=22
    BREAK=23
    CONTINUE=24
    TRUE=25
    FALSE=26
    ASIG=27
    SUM=28
    RES=29
    MUL=30
    DIV=31
    MOD=32
    AND=33
    OR=34
    NOT=35
    GT=36
    LT=37
    GTE=38
    LTE=39
    EQ=40
    NEQ=41
    PAI=42
    PAD=43
    LLA=44
    LLC=45
    SEMI=46
    COMMA=47
    NUM=48
    FLOAT=49
    STRING=50
    VAR=51
    LINE_COMMENT=52
    WS=53
    ERROR_CHAR=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(gramatica_v4Parser.PROGRAM, 0)

        def LLA(self):
            return self.getToken(gramatica_v4Parser.LLA, 0)

        def LLC(self):
            return self.getToken(gramatica_v4Parser.LLC, 0)

        def EOF(self):
            return self.getToken(gramatica_v4Parser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.StatementContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.StatementContext,i)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = gramatica_v4Parser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(gramatica_v4Parser.PROGRAM)
            self.state = 71
            self.match(gramatica_v4Parser.LLA)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2251799846303728) != 0):
                self.state = 72
                self.statement()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(gramatica_v4Parser.LLC)
            self.state = 79
            self.match(gramatica_v4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(gramatica_v4Parser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(gramatica_v4Parser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(gramatica_v4Parser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(gramatica_v4Parser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ForStatementContext,0)


        def functionDecl(self):
            return self.getTypedRuleContext(gramatica_v4Parser.FunctionDeclContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ReturnStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(gramatica_v4Parser.PrintStmtContext,0)


        def importStmt(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ImportStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(gramatica_v4Parser.BreakStmtContext,0)


        def continueStmt(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ContinueStmtContext,0)


        def switchStatement(self):
            return self.getTypedRuleContext(gramatica_v4Parser.SwitchStatementContext,0)


        def structDecl(self):
            return self.getTypedRuleContext(gramatica_v4Parser.StructDeclContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = gramatica_v4Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.whileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 85
                self.forStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 86
                self.functionDecl()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 87
                self.returnStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 88
                self.printStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 89
                self.importStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 90
                self.breakStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 91
                self.continueStmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 92
                self.switchStatement()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 93
                self.structDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationStatement(self):
            return self.getTypedRuleContext(gramatica_v4Parser.DeclarationStatementContext,0)


        def SEMI(self):
            return self.getToken(gramatica_v4Parser.SEMI, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = gramatica_v4Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.declarationStatement()
            self.state = 97
            self.match(gramatica_v4Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECL(self):
            return self.getToken(gramatica_v4Parser.DECL, 0)

        def tipo(self):
            return self.getTypedRuleContext(gramatica_v4Parser.TipoContext,0)


        def VAR(self):
            return self.getToken(gramatica_v4Parser.VAR, 0)

        def ASIG(self):
            return self.getToken(gramatica_v4Parser.ASIG, 0)

        def expr(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ExprContext,0)


        def arrayLiteral(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ArrayLiteralContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_declarationStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationStatement" ):
                listener.enterDeclarationStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationStatement" ):
                listener.exitDeclarationStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationStatement" ):
                return visitor.visitDeclarationStatement(self)
            else:
                return visitor.visitChildren(self)




    def declarationStatement(self):

        localctx = gramatica_v4Parser.DeclarationStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declarationStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(gramatica_v4Parser.DECL)
            self.state = 100
            self.tipo()
            self.state = 101
            self.match(gramatica_v4Parser.VAR)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 102
                self.match(gramatica_v4Parser.ASIG)
                self.state = 105
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [25, 26, 42, 48, 49, 50, 51]:
                    self.state = 103
                    self.expr(0)
                    pass
                elif token in [1]:
                    self.state = 104
                    self.arrayLiteral()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(gramatica_v4Parser.STRUCT, 0)

        def VAR(self):
            return self.getToken(gramatica_v4Parser.VAR, 0)

        def LLA(self):
            return self.getToken(gramatica_v4Parser.LLA, 0)

        def LLC(self):
            return self.getToken(gramatica_v4Parser.LLC, 0)

        def structField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.StructFieldContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.StructFieldContext,i)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_structDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDecl" ):
                listener.enterStructDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDecl" ):
                listener.exitStructDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDecl" ):
                return visitor.visitStructDecl(self)
            else:
                return visitor.visitChildren(self)




    def structDecl(self):

        localctx = gramatica_v4Parser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(gramatica_v4Parser.STRUCT)
            self.state = 110
            self.match(gramatica_v4Parser.VAR)
            self.state = 111
            self.match(gramatica_v4Parser.LLA)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2251799813686240) != 0):
                self.state = 112
                self.structField()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(gramatica_v4Parser.LLC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructFieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(gramatica_v4Parser.TipoContext,0)


        def VAR(self):
            return self.getToken(gramatica_v4Parser.VAR, 0)

        def SEMI(self):
            return self.getToken(gramatica_v4Parser.SEMI, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_structField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructField" ):
                listener.enterStructField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructField" ):
                listener.exitStructField(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructField" ):
                return visitor.visitStructField(self)
            else:
                return visitor.visitChildren(self)




    def structField(self):

        localctx = gramatica_v4Parser.StructFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_structField)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.tipo()
            self.state = 121
            self.match(gramatica_v4Parser.VAR)
            self.state = 122
            self.match(gramatica_v4Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def baseTipo(self):
            return self.getTypedRuleContext(gramatica_v4Parser.BaseTipoContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = gramatica_v4Parser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.baseTipo()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 125
                self.match(gramatica_v4Parser.T__0)
                self.state = 126
                self.match(gramatica_v4Parser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseTipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(gramatica_v4Parser.INT, 0)

        def FLOAT_T(self):
            return self.getToken(gramatica_v4Parser.FLOAT_T, 0)

        def STRING_T(self):
            return self.getToken(gramatica_v4Parser.STRING_T, 0)

        def BOOL(self):
            return self.getToken(gramatica_v4Parser.BOOL, 0)

        def VOID(self):
            return self.getToken(gramatica_v4Parser.VOID, 0)

        def VAR(self):
            return self.getToken(gramatica_v4Parser.VAR, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_baseTipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseTipo" ):
                listener.enterBaseTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseTipo" ):
                listener.exitBaseTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBaseTipo" ):
                return visitor.visitBaseTipo(self)
            else:
                return visitor.visitChildren(self)




    def baseTipo(self):

        localctx = gramatica_v4Parser.BaseTipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_baseTipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2251799813686240) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(gramatica_v4Parser.AssignmentStatementContext,0)


        def SEMI(self):
            return self.getToken(gramatica_v4Parser.SEMI, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = gramatica_v4Parser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.assignmentStatement()
            self.state = 132
            self.match(gramatica_v4Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_assignmentStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FieldAssignContext(AssignmentStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.AssignmentStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.VAR)
            else:
                return self.getToken(gramatica_v4Parser.VAR, i)
        def DOT(self):
            return self.getToken(gramatica_v4Parser.DOT, 0)
        def ASIG(self):
            return self.getToken(gramatica_v4Parser.ASIG, 0)
        def expr(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldAssign" ):
                listener.enterFieldAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldAssign" ):
                listener.exitFieldAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldAssign" ):
                return visitor.visitFieldAssign(self)
            else:
                return visitor.visitChildren(self)


    class SimpleAssignContext(AssignmentStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.AssignmentStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(gramatica_v4Parser.VAR, 0)
        def ASIG(self):
            return self.getToken(gramatica_v4Parser.ASIG, 0)
        def expr(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleAssign" ):
                listener.enterSimpleAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleAssign" ):
                listener.exitSimpleAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleAssign" ):
                return visitor.visitSimpleAssign(self)
            else:
                return visitor.visitChildren(self)



    def assignmentStatement(self):

        localctx = gramatica_v4Parser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignmentStatement)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = gramatica_v4Parser.SimpleAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.match(gramatica_v4Parser.VAR)
                self.state = 135
                self.match(gramatica_v4Parser.ASIG)
                self.state = 136
                self.expr(0)
                pass

            elif la_ == 2:
                localctx = gramatica_v4Parser.FieldAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(gramatica_v4Parser.VAR)
                self.state = 138
                self.match(gramatica_v4Parser.DOT)
                self.state = 139
                self.match(gramatica_v4Parser.VAR)
                self.state = 140
                self.match(gramatica_v4Parser.ASIG)
                self.state = 141
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(gramatica_v4Parser.IF, 0)

        def PAI(self):
            return self.getToken(gramatica_v4Parser.PAI, 0)

        def condition(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ConditionContext,0)


        def PAD(self):
            return self.getToken(gramatica_v4Parser.PAD, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.BlockContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.BlockContext,i)


        def ELSE(self):
            return self.getToken(gramatica_v4Parser.ELSE, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):
